# ros2work

./: README  README.md
RobotiqHandeROS2Driver/gripper_srv/: CMakeLists.txt
UR5eWithRobotiqHandE/ur_robotiq_description/: CMakeLists.txt
UR5eWithRobotiqHandE/ur_robotiq_moveit_config/: CMakeLists.txt  package.xml
moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur5e_robotiq.urdf.xacro
moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
moveit_config/srdf/: ur5e_robotiq.srdf
moveit_gripper/: CMakeLists.txt  package.xml
moveit_gripper/src/: moveit_gripper.cpp
moveit_pose/: CMakeLists.txt  package.xml
moveit_pose/src/: moveit_pose.cpp
moveit_py/: package.xml  setup.py
moveit_py/moveit_py/: moveit_py.py
moveit_simple/: CMakeLists.txt  package.xml
moveit_simple/src/: moveit_simple.cpp
opencv_tools/: package.xml  setup.py
opencv_tools/opencv_tools/: aruco_pose.py  basic_image_subscriber.py
pick_vial/: CMakeLists.txt  package.xml
pick_vial/config/: test_publishers_config.yaml  wave_publishers_config.yaml
pick_vial/launch/: arm_move.py  pick_place.launch.py
pick_vial/src/: pick_place.cpp
ur_description_gripper/: CMakeLists.txt  package.xml
ur_description_gripper/urdf/: robotiq_2f_85_urdf.xacro  ur5e_hande.xacro  ur5e_robotiq_2f_85_urdf.xacro  ur5e_urdf.xacro
(+14 files in other folders)
